--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,96 @@
-pillow
-requests
-jupyter
-numpy
-pandas
-matplotlib
-seaborn
-graphviz
-Cython
+absl-py==1.0.0
+appnope==0.1.2
+argon2-cffi==21.3.0
+argon2-cffi-bindings==21.2.0
+astor==0.8.1
+async-generator==1.10
+attrs==21.4.0
+backcall==0.2.0
+bleach==4.1.0
+cached-property==1.5.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.10
+cycler==0.11.0
+Cython==0.29.26
+dataclasses==0.8
+decorator==5.1.1
+defusedxml==0.7.1
+entrypoints==0.3
+gast==0.2.2
+google-pasta==0.2.0
+graphviz==0.19.1
+grpcio==1.43.0
+h5py==3.1.0
+idna==3.3
+importlib-metadata==4.8.3
+ipykernel==5.5.6
+ipython==7.16.3
+ipython-genutils==0.2.0
+ipywidgets==7.6.5
+jedi==0.17.2
+Jinja2==3.0.3
+jsonschema==3.2.0
+jupyter==1.0.0
+jupyter-client==7.1.1
+jupyter-console==6.4.0
+jupyter-core==4.9.1
+jupyterlab-pygments==0.1.2
+jupyterlab-widgets==1.0.2
+Keras==2.1.6
+Keras-Applications==1.0.8
+Keras-Preprocessing==1.1.2
+kiwisolver==1.3.1
+Markdown==3.3.6
+MarkupSafe==2.0.1
+matplotlib==3.3.4
+mistune==0.8.4
+nbclient==0.5.9
+nbconvert==6.0.7
+nbformat==5.1.3
+nest-asyncio==1.5.4
+notebook==6.4.7
+numpy==1.19.5
+opt-einsum==3.3.0
+packaging==21.3
+pandas==1.1.5
+pandocfilters==1.5.0
+parso==0.7.1
+pexpect==4.8.0
+pickleshare==0.7.5
+Pillow==8.4.0
+prometheus-client==0.12.0
+prompt-toolkit==3.0.24
+protobuf==3.19.3
+ptyprocess==0.7.0
+pycparser==2.21
+Pygments==2.11.2
+pyparsing==3.0.6
+pyrsistent==0.18.0
+python-dateutil==2.8.2
+pytz==2021.3
+PyYAML==6.0
+pyzmq==22.3.0
+qtconsole==5.2.2
+QtPy==2.0.0
+requests==2.27.1
+scipy==1.5.4
+seaborn==0.11.2
+Send2Trash==1.8.0
+six==1.16.0
+tensorboard==1.9.0
+tensorflow==1.9.0
+tensorflow-estimator==1.15.1
+termcolor==1.1.0
+terminado==0.12.1
+testpath==0.5.0
+tornado==6.1
+traitlets==4.3.3
+typing_extensions==4.0.1
+urllib3==1.26.8
+wcwidth==0.2.5
+webencodings==0.5.1
+Werkzeug==2.0.2
+widgetsnbextension==3.5.2
+wrapt==1.13.3
+zipp==3.6.0
